--- a/index.html
+++ b/index.html
@@ -39,24 +39,7 @@
     <meta name="msapplication-config" content="/icon/_favicon/browserconfig.xml">
 
   </head>
-  <body class="body" data-csrf-token="895a9203b829fe088ad4f6053e4b7bfc"><script id="__bs_script__">//<![CDATA[
-  (function() {
-    try {
-      var script = document.createElement('script');
-      if ('async') {
-        script.async = true;
-      }
-      script.src = '/browser-sync/browser-sync-client.js?v=2.29.3'.replace("HOST", location.hostname);
-      if (document.body) {
-        document.body.appendChild(script);
-      } else if (document.head) {
-        document.head.appendChild(script);
-      }
-    } catch (e) {
-      console.error("Browsersync: could not append script tag", e);
-    }
-  })()
-//]]></script><script async src="/browser-sync/browser-sync-client.js?v=2.29.3"></script>
+  <body class="body" data-csrf-token="c804bf658d7e5cdd0bda76ecb4604040">
 
     <div class="wrapper">
       <div class="document-overlay-bg"></div>
