--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
   </div>
 </section>      <section class="merch section-gap-vertical-md">
   <div class="merch__inner container-md">
-    <h2 class="merch__title title fsz-title-lg">Merchandising</h2>
-    <p class="merch__text fsz-text-lg">Photo administration of&nbsp;product display (Merchandising) - Our no‑install, user‑friendly tool allows easy employee management and data handling with photo uploads and location details. Streamline operations with quick data entry, advanced filtering, and Excel export for detailed analysis. Enhance merchandising efficiently.</p>
+    <h2 class="merch__title title fsz-title-lg">Data Administration</h2>
+    <p class="merch__text fsz-text-lg">Photo administration of&nbsp;product display - Our no‑install, user‑friendly tool allows easy employee management and data handling with photo uploads and location details. Streamline operations with quick data entry, advanced filtering, and Excel export for detailed analysis. Enhance merchandising efficiently.</p>
     <div class="merch__partners partners">
       <h2 class="partners__title title fsz-title-lg center">Our Partners</h2>
       <ul class="partners__list">
